--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -19,6 +19,7 @@
     width: 100%;
     height: 100px;
     top: 0;
+    z-index: 999;
 
     .active {
         .nav-link {
